--- a/action.yml
+++ b/action.yml
@@ -9,3 +9,20 @@ inputs:
 runs:
   using: "node20"
   main: "index.js"
+
+jobs:
+  build:
+  runs-on: ubuntu-latest
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    -name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
+
+    - name: Install dependencies
+      run: npm ci # Installs dependencies based on package-lock.json and faster too
+
+
